k8s/base/plant-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-ui
  namespace: plant-ui
spec:
  type: NodePort
  selector:
    app: plant-ui
  ports:
    - port: 8765
      targetPort: 8765
      nodePort: 30801
